--- a/modules/ansible/config.boot.j2
+++ b/modules/ansible/config.boot.j2
@@ -1,9 +1,13 @@
 interfaces {
     ethernet eth0 {
-        address {{ wan_ip }}/24
+        address 10.0.17.200/24
+        description 480-WAN
+        hw-id 00:50:56:b1:62:63
     }
     ethernet eth1 {
-        address {{ lan_ip }}/24
+        address 10.0.5.2/24
+        description BLUE-LAN
+        hw-id 00:50:56:b1:eb:f1
     }
     loopback lo {
     }
@@ -13,7 +17,7 @@ nat {
         rule 10 {
             outbound-interface eth0
             source {
-                address {{ lan }}
+                address 10.0.5.0/24
             }
             translation {
                 address masquerade
@@ -24,7 +28,9 @@ nat {
 protocols {
     static {
         route 0.0.0.0/0 {
-            next-hop {{ gateway }} {
+            next-hop 10.0.17.2 {
+            }
+            next-hop 192.168.7.250 {
             }
         }
     }
@@ -32,8 +38,10 @@ protocols {
 service {
     dns {
         forwarding {
-            allow-from {{ lan }}
-            listen-address {{ lan_ip }}
+            allow-from 10.0.17.0/24
+            allow-from 10.0.5.0/24
+            listen-address 10.0.17.2
+            listen-address 10.0.5.2
             system
         }
     }
@@ -61,15 +69,18 @@ system {
             speed 115200
         }
     }
-    host-name {{ hostname }}
+    host-name fw-blue1
     login {
         user vyos {
             authentication {
-                encrypted-password {{ password_hash }}
+                encrypted-password $6$rexBgmH1CAaLQd2P$i/Tjakj1idX.LR3ZRPTWsw6hPF4IbjpYRyXXtZ9Tvaz0JudmP6u0bYL.uTAJlIiPDmz9Ph2/kaLkw2dIQoK4v0
+                plaintext-password ""
             }
         }
     }
-    name-server {{ name_server }}
+    name-server 192.168.4.4
+    name-server 192.168.4.5
+    name-server 10.0.17.4
     ntp {
         server time1.vyos.net {
         }
